Link to GIT repository of JumboJS repaired; Menu closing after item click (on mobile) added

--- a/default.less
+++ b/default.less
@@ -487,6 +487,10 @@ main {
 
     > section {
       width: 100%;
+
+      > h1 {
+        margin-left: -0.25em;
+      }
     }
   }
 
